--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,42 @@
 .data/
 
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.egg-info/
+.pytest_cache/
+
+# Node/JS
+node_modules/
+.pnpm-store/
+.pnp
+.pnp.js
+dist/
+build/
+.next/
+out/
+*.tsbuildinfo
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Env
+.env
+.env.*
+
+# IDE/OS
+.vscode/
+.idea/
 *.swp
+*.swo
 *.save
+*~
+.DS_Store
+Thumbs.db
+
+# Virtualenv
 venv/
