--- a/.env
+++ b/.env
@@ -7,6 +7,15 @@ POSTGRES_PASSWORD=nextintranet_password
 BACKEND_PORT=8000
 BACKEND_DEBUG=true
 BACKEND_SECRET_KEY=change_this_to_a_secure_random_string
+S3_ENDPOINT_URL=http://minio:9000
+S3_PUBLIC_ENDPOINT_URL=http://localhost:9003
+S3_STORAGE_BUCKET_NAME=nextintranet-dev
+S3_ACCESS_KEY_ID=minioadmin
+S3_SECRET_ACCESS_KEY=minioadmin
+S3_REGION_NAME=us-east-1
+MINIO_BUCKET=nextintranet-dev
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=minioadmin
 
 # Frontend configuration
 NODE_ENV=production
